--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,8 +34,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="이메일 양식으로 입력"
-        android:inputType="textEmailAddress"
-        />
+        android:inputType="textEmailAddress"/>
 
     <TextView
         android:layout_marginTop="15dp"
